snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
903489a5f19da10cd9cd07d3caa5de1bd383a4294e9a936ad5096dedb4f78d3c